@@ -1,0 +1,16 @@
+# $NetBSD: Makefile,v 1.1.1.1 2004/11/01 21:50:40 jdolecek Exp $
+
+DISTNAME=	SOAP-0.7.5
+CATEGORIES+=	net
+
+MAINTAINER=	jdolecek@NetBSD.org
+HOMEPAGE= 	http://pear.php.net/package/SOAP
+COMMENT=	SOAP Client/Server for PHP
+
+DEPENDS+=	pear-Mail_Mime>=1.2:../../mail/pear-Mail_Mime
+DEPENDS+=	pear-HTTP_Request>=1.2:../../www/pear-HTTP_Request
+DEPENDS+=	pear-Net_URL>=1.0:../../net/pear-Net_URL
+DEPENDS+=	pear-Net_DIME>=0.3:../../net/pear-Net_DIME
+
+.include "../../lang/php/pear.mk"
+.include "../../mk/bsd.pkg.mk"
